Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2150

Bad page state in sanity test 224b

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 5170

      Saw this today
      [95199.576581] Lustre: DEBUG MARKER: == sanity test 224b: Don't panic on bulk IO failure == 14:59:34 (1349981974)

      [95202.690658] LustreError: 23933:0:(events.c:198:client_bulk_callback()) event 
      type 2, status -5, desc ffff8801f921ff30
      [95202.695210] LustreError: 2618:0:(client.c:1811:ptlrpc_check_set()) @@@ bulk transfer failed  req@ffff880239335bf0 x1415557505831045/t0(0) o3->lustre-OST0000-osc-ffff8802123cabf0@0@lo:6/4 lens 488/400 e 0 to 0 dl 1349981981 ref 2 fl Bulk:R/0/0 rc 4096/4096
      [95206.701592] BUG: Bad page state in process dd  pfn:25457f
      [95206.704612] page:ffffea00082733c8 flags:0040000000000008 count:0 mapcount:0 mapping:ffff8801a9db3d00 index:0 (Tainted: G    B      ---------------   )
      [95206.708170] Pid: 2458, comm: dd Tainted: G    B      ---------------    2.6.3
      2-debug #5[95206.709824] Call Trace:
      [95206.710346]  [<ffffffff81122e77>] ? bad_page+0x107/0x160
      [95206.711434]  [<ffffffff81126069>] ? free_hot_cold_page+0x209/0x260[95206.712699]  [<ffffffff811977d9>] ? touch_atime+0x69/0x170
      [95206.713846]  [<ffffffff81126102>] ? __pagevec_free+0x42/0x90[95206.715041]  [<ffffffff8112989c>] ? release_pages+0x21c/0x250
      [95206.716193]  [<ffffffff8116036c>] ? transfer_objects+0x5c/0x80[95206.717453]  [<ffffffff8116c200>] ? mem_cgroup_get_reclaim_stat_from_page+0x2
      0/0x70
      [95206.718979]  [<ffffffff81129c08>] ? ____pagevec_lru_add+0x158/0x170
      [95206.720256]  [<ffffffff81129d8b>] ? lru_add_drain+0x9b/0xa0
      [95206.721442]  [<ffffffff81142efe>] ? unmap_region+0x4e/0x130
      [95206.722583]  [<ffffffff81143606>] ? do_munmap+0x2b6/0x3a0
      

            bzzz Alex Zhuravlev
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: